Fixed logo being squished

--- a/src/sass/state/_mediaqueries.scss
+++ b/src/sass/state/_mediaqueries.scss
@@ -76,7 +76,8 @@
         .logo {
             height: 100%;
             margin: 0;
-            display: inline-block;
+            display: block;
+            position: absolute;
         }
 
         .mobile-header {
